instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: type white is not a member of object java.awt.Color
getCouleurBrosse():Color.white
                         ^