instructions.InstructionsDrawG.scala.code
getCouleurBrosse():Color.white

leveBrosse();
gauche();
avance(4:Int);
gauche();
avance(4:Int);
gauche();
avance(4:Int);
gauche();
avance(2:Int);
gauche();
avance();
leveBrosse();
droite();
avance(2:Int);
droite();
avance();
gauche();